[tool.poetry]
    authors     = ["Jeff"]
    description = "Interview Technical 1"
    license     = "MIT"
    name        = "fractility"
    readme      = "README.md"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        python = "^3.12"
    ipykernel = "^6.29.5"
    duckdb = "^1.0.0"
    altair = "^5.4.0"
    pandas = "^2.2.2"
    vegafusion = {version = ">=1.5.0", extras = ["embed"]}
    black = "^24.8.0"
    isort = "^5.13.2"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]
